# sciple-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  server.json
.github/workflows/: publish.yml
dxt/: manifest.json
dxt/server/: main.py
src/sciple_mcp/: auth.py  client.py  credentials.py  daemon.py  login.py  serve.py  server.py
src/sciple_mcp/tools/: athena.py  cloud.py  dbconsole.py  environments.py  observability.py  projects.py  runbooks.py  services.py  tickets.py
tests/: test_client.py  test_cloud.py
