[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sciple-mcp"
version = "0.5.0"
description = "MCP server for populating and managing Sciple platform content"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Navaganesh Raju", email = "navaganesh.raju@gmail.com" },
]
keywords = ["mcp", "sciple", "claude", "anthropic", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    # HTTP transport (Phase 3): `sciple-mcp serve` runs an ASGI app with auth middleware.
    "uvicorn>=0.30",
    "starlette>=0.36",
    "pyjwt[crypto]>=2.8",
]

[project.urls]
Homepage      = "https://github.com/navaganeshr/sciple-mcp"
Source        = "https://github.com/navaganeshr/sciple-mcp"
Issues        = "https://github.com/navaganeshr/sciple-mcp/issues"
Documentation = "https://github.com/navaganeshr/sciple-mcp#readme"

[project.scripts]
sciple-mcp = "sciple_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sciple_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
